--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ repository = "https://github.com/LiteSVM/litesvm"
 rust-version = "1.86.0"
 
 [workspace.dependencies]
-agave-feature-set = "3.0"
-agave-precompiles = "3.0"
-agave-reserved-account-keys = "3.0"
-agave-syscalls = "3.0"
+agave-feature-set = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
+agave-precompiles = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
+agave-reserved-account-keys = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
+agave-syscalls = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
 ansi_term = "0.12"
 bincode = "1.3"
 criterion = "0.7"
@@ -32,17 +32,17 @@ serde = "1.0"
 smallvec = "1.13"
 solana-account = "3.0"
 solana-address-lookup-table-interface = "3.0"
-solana-bpf-loader-program = "3.0"
-solana-builtins = "3.0"
+solana-bpf-loader-program = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
+solana-builtins = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
 solana-clock = "3.0"
-solana-compute-budget = "3.0"
-solana-compute-budget-instruction = "3.0"
+solana-compute-budget = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
+solana-compute-budget-instruction = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
 solana-compute-budget-interface = "3.0"
 solana-config-interface = "2.0.0"
 solana-ed25519-program = "3.0"
 solana-epoch-rewards = "3.0"
 solana-epoch-schedule = "3.0"
-solana-fee = "3.0"
+solana-fee = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
 solana-fee-structure = "3.0"
 solana-hash = "3.0"
 solana-instruction = "3.0"
@@ -59,7 +59,7 @@ solana-precompile-error = "3.0"
 solana-program-error = "3.0"
 solana-program-option = "3.0"
 solana-program-pack = "3.0"
-solana-program-runtime = "3.0"
+solana-program-runtime = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
 solana-pubkey = "3.0"
 solana-rent = "3.0"
 solana-sdk-ids = "3.0"
@@ -70,16 +70,16 @@ solana-signer = "3.0"
 solana-slot-hashes = "3.0"
 solana-slot-history = "3.0"
 solana-stake-interface = "2.0.1"
-solana-svm-callback = "3.0"
-solana-svm-log-collector = "3.0"
-solana-svm-timings = "3.0"
-solana-svm-transaction = "3.0"
+solana-svm-callback = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
+solana-svm-log-collector = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
+solana-svm-timings = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
+solana-svm-transaction = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
 solana-system-interface = "2.0"
-solana-system-program = "3.0"
+solana-system-program = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
 solana-sysvar = "3.0"
 solana-sysvar-id = "3.0"
 solana-transaction = "3.0"
-solana-transaction-context = "3.0"
+solana-transaction-context = { git = "https://github.com/txtx/solana", branch = "txtx/increase-tx-size-v3.0.10" }
 solana-transaction-error = "3.0"
 solana-vote-interface = "4.0"
 spl-associated-token-account-interface = "2.0"
