--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ repository = "https://github.com/LiteSVM/litesvm"
 rust-version = "1.86.0"
 
 [workspace.dependencies]
-agave-feature-set = "~3.1"
-agave-precompiles = "~3.1"
-agave-reserved-account-keys = "~3.1"
-agave-syscalls = "~3.1"
+agave-feature-set = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
+agave-precompiles = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
+agave-reserved-account-keys = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
+agave-syscalls = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
 ansi_term = "0.12"
 bincode = "1.3"
 bv = "0.11.1"
@@ -35,17 +35,17 @@ smallvec = "1.13"
 solana-account = "3.3"
 solana-address = "2.0"
 solana-address-lookup-table-interface = "~3.0"
-solana-bpf-loader-program = "~3.1"
-solana-builtins = "~3.1"
+solana-bpf-loader-program = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
+solana-builtins = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
 solana-clock = "~3.0"
-solana-compute-budget = "~3.1"
-solana-compute-budget-instruction = "~3.1"
+solana-compute-budget = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
+solana-compute-budget-instruction = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
 solana-compute-budget-interface = "~3.0"
 solana-config-interface = "2.0.0"
 solana-ed25519-program = "~3.0"
 solana-epoch-rewards = "~3.0"
 solana-epoch-schedule = "~3.0"
-solana-fee = "~3.1"
+solana-fee = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
 solana-fee-structure = "~3.0"
 solana-hash = "4.0"
 solana-instruction = "~3.1"
@@ -62,7 +62,7 @@ solana-precompile-error = "~3.0"
 solana-program-error = "~3.0"
 solana-program-option = "~3.0"
 solana-program-pack = "~3.0"
-solana-program-runtime = "~3.1"
+solana-program-runtime = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
 solana-rent = "3.1"
 solana-sdk-ids = "~3.1"
 solana-secp256k1-program = "~3.0"
@@ -72,16 +72,16 @@ solana-signer = "~3.0"
 solana-slot-hashes = "~3.0"
 solana-slot-history = "~3.0"
 solana-stake-interface = "2.0.1"
-solana-svm-callback = "~3.1"
-solana-svm-log-collector = "~3.1"
-solana-svm-timings = "~3.1"
-solana-svm-transaction = "~3.1"
+solana-svm-callback = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
+solana-svm-log-collector = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
+solana-svm-timings = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
+solana-svm-transaction = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
 solana-system-interface = "3.0.0"
-solana-system-program = "~3.1"
+solana-system-program = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
 solana-sysvar = "~3.1"
 solana-sysvar-id = "~3.1"
 solana-transaction = "~3.0"
-solana-transaction-context = "~3.1"
+solana-transaction-context = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
 solana-transaction-error = "~3.0"
 solana-vote-interface = "5.0.0"
 spl-associated-token-account-interface = "2.0"
